--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		
 				<h2>CSS Listing</h2>
 				<p>jQuery plugin demo by Maciej Kupisiewicz</p>
+				<p>Go to <a href="https://github.com/kupisiewicz/cssListing">GitHub project page</a> for more information.</p>
 				
 				<h3>Three ways to show CSS code</h3>
 				
